RESOLVED FIXED239649
REGRESSION (r291817): NativeImage passed to RemoteResourceCacheProxy::recordNativeImageUse may be null
https://bugs.webkit.org/show_bug.cgi?id=239649
Summary REGRESSION (r291817): NativeImage passed to RemoteResourceCacheProxy::recordN...
Antoine Quint
Reported 2022-04-22 03:27:05 PDT
We need to check the value passed to recordResourceUse in Recorder::drawSystemImage is not null since it's a pointer.
Attachments
Antoine Quint
Comment 1 2022-04-22 03:27:21 PDT
Antoine Quint
Comment 2 2022-04-22 03:29:48 PDT
EWS
Comment 3 2022-05-09 08:18:03 PDT
Committed r293975 (250413@main): <https://commits.webkit.org/250413@main> Reviewed commits have been landed. Closing PR #358 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.