REGRESSION (r291817): NativeImage passed to RemoteResourceCacheProxy::recordNativeImageUse may be null https://bugs.webkit.org/show_bug.cgi?id=239649 rdar://92018859

Reviewed by Dean Jackson.

Test: system-preview/svg-image.html

In the case of an <img> pointing to an SVG resource, the nativeImage() is null. We need to handle this case
properly (filed bug 239673), but for now we can at least not crash.

* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::drawSystemImage):

Canonical link: https://commits.webkit.org/250413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293975 268f45cc-cd09-0410-ab3c-d52691b4dbfc